# matrixlayout

./: .gitignore  AGENTS.md  LICENSE.txt  MANIFEST.in  README.md  matrixlayout_demo.ipynb  mkdocs.yml  pyproject.toml  pytest.ini  render_smoke.py
.github/workflows/: ci.yml  docs.yml
binder/: apt.txt  postBuild  requirements.txt
docs/: api.md  decorators.md  end-to-end.md  getting-started.md  glossary.md  index.md  interop.md  overview.md  pitfalls.md  recipes.md  rendering.md  specs.md
docs/notebooks/: 00_stack_of_matrices.ipynb  01_ge_grids.ipynb  01_ge_minimal.ipynb  02_qr_grids.ipynb  02_qr_layout.ipynb  03_eig_svd_table.ipynb  03_eig_svd_tables.ipynb  04_backsubstitution.ipynb  04_decorators_gallery.ipynb  (+4 more)
matrixlayout/: __about__.py  __init__.py  backsubst.py  backsubst_helpers.py  eigproblem.py  eigproblem_decorations.py  formatting.py  ge.py  ge_decorations.py  ge_decorator_map.py  ge_grid.py  ge_grid_specs.py  ge_labels.py  ge_layout_merge.py  ge_paths.py  ge_render_grid.py  ge_spec_merge.py  ge_template.py  ge_text_specs.py  jinja_env.py  nicematrix_decor.py  qr.py  qr_spec_merge.py  render.py  shortcascade.py  specs.py
matrixlayout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_backsubst.py  test_backsubst_decorators.py  test_backsubst_helpers.py  test_eigproblem.py  test_eigproblem_decorations_helpers.py  test_eigproblem_decorators.py  test_eigproblem_render.py  test_formatting.py  test_formatting_decorators.py  test_formatting_helpers.py  test_ge.py  test_ge_decorations.py  test_ge_decorations_spec.py  test_ge_decorator_map.py  test_ge_decorators.py  test_ge_geometry_and_callouts.py  test_ge_grid_bundle.py  test_ge_grid_helpers.py  test_ge_grid_interop.py  test_ge_grid_spec.py  test_ge_grid_specs.py  test_ge_grid_submatrix_spans.py  test_ge_grid_tex.py  test_ge_labels_helpers.py  test_ge_layout_spec.py  test_ge_layout_spec_typed_and_dicts.py  test_ge_layout_string_hooks.py  test_ge_merge_helpers.py  test_ge_paths.py  test_ge_render_grid.py  test_ge_template_helpers.py  test_ge_text_specs.py  test_jinja_env.py  test_jinja_loader_fallback.py  test_nicematrix_decor.py  test_performance_guardrails.py  test_public_api.py  test_qr_decorators.py  (+9 more)
(+13 files in other folders)
