[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "matrixlayout"
version = "0.0.0"
description = "Matrix-based layout and presentation library (template environment prototype)"
requires-python = ">=3.9"
dependencies = ["jinja2>=2.11"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "render: end-to-end TeX->SVG smoke tests (opt-in via MATRIXLAYOUT_RUN_RENDER_TESTS=1)",
]
