[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrixlayout"
dynamic = ["version"]
description = "Layout-only TeX generators for matrix-themed figures with delegated SVG rendering."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "jinja2>=3.1",
  "sympy>=1.10",
]

[project.optional-dependencies]
render = [
  "jupyter-tikz>=0.5.6",
]

dev = [
  "build>=1.2",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
  "twine>=5.1",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "test*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
matrixlayout = ["templates/*.j2"]

[tool.setuptools.dynamic]
version = {attr = "matrixlayout.__about__.__version__"}

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["docs/notebooks/*.ipynb", "matrixlayout_demo.ipynb"]

[tool.ruff.lint]
select = ["E9", "F"]
